# projetos_C14

./: .gitignore  README.md  main.py  pyproject.toml
gerador_qrcodes/: gerador_qrcode.py
